--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
 									<ul style="font-size:15px;">
 										<li style="font-weight: bold;font-size: 20px;">تم اصلاح جميع اخطاء الاستايل على الهواتف وتحسين جودة العرض</li>
 
-										<li>تستطيع صنع كروت خاصة بالاستراحة يوزر مانجر أو هوت سبوت عبر شبكتك</li>
+										<li>تستطيع صنع كروت خاصة بالاستراحة يوزر مانجر أو هوت سبوت عبر شبكتك , وستكون السرعة معزولة عن التقسيم المحدد للعملاء</li>
+
 										<li>ملفات استراحتك تبقى كما هي ولن تنقل مجلد واحد فقط عند اضافة الاقسام تضيف المسارات الى النظام بكل سهولة .</li>
 										<li>التحكم الكامل بسرعة المشاهدة وسرعه التنزيل للمستخدمين </li>
 										<li>يدعم معضم الصيغ  المشهورة لملفات الفيديو</li>
