--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link href="./css/style.css" rel="stylesheet">
        	<script src="js/jq.js"></script>
     </head>
-	<body style="font-family: "Segoe UI", Tahoma, sans-serif;">
+	<body >
 
 		<div class="Loader">
 			<div class="sk-cube-grid ">
