--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 					<div class="col-md-12 " style="color:#fff">
 						<div class="row">
 							<div class="col-md-8 col-xs-12 " style="color:#fff">
-								<div style="margin-top:100px;float: right;">
+								<div style="margin-top:90px;float: right;">
 									<h1 style="font-size:30px;">نقدم لك نظام Estra7ah Manager <span style="font-size:12px;opacity: 0.6;font-style: italic;">الاصدار 2.8</span></h1>
 									<ul style="font-size:15px;">
-										<li style="font-weight: bold;font-size: 18px;">تم اصلاح جميع اخطاء الاستايل على الهواتف وتحسين جودة العرض</li>
+										<li style="font-weight: bold;font-size: 16px;">تم اصلاح جميع اخطاء الاستايل على الهواتف وتحسين جودة العرض</li>
 
-										<li style="font-weight: bold;font-size: 18px;">تستطيع صنع كروت خاصة بالاستراحة يوزر مانجر أو هوت سبوت عبر شبكتك , وستكون السرعة معزولة عن التقسيم المحدد للعملاء .</li>
-
+										<li style="font-weight: bold;font-size: 16px;">تستطيع صنع كروت خاصة بالاستراحة يوزر مانجر أو هوت سبوت عبر شبكتك , وستكون السرعة معزولة عن التقسيم المحدد للعملاء .</li>
+										<li style="font-weight: bold;font-size: 16px;">ندعم جميع صيغ الفيديو المشهوره على الهواتف وكذالك يمكنك تشغيل مقاطع الفيديو على اي تطبيق مثل vlc او kmplayer على الاندرويد</li>
 										<li>ملفات استراحتك تبقى كما هي ولن تنقل مجلد واحد فقط عند اضافة الاقسام تضيف المسارات الى النظام بكل سهولة .</li>
 										<li>التحكم الكامل بسرعة المشاهدة وسرعه التنزيل للمستخدمين </li>
 										<li>يدعم معضم الصيغ  المشهورة لملفات الفيديو</li>
