--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<li style="font-weight: bold;font-size: 16px;">تم اصلاح جميع اخطاء الاستايل على الهواتف وتحسين جودة العرض</li>
 
 										<li style="font-weight: bold;font-size: 16px;">تستطيع صنع كروت خاصة بالاستراحة يوزر مانجر أو هوت سبوت عبر شبكتك , وستكون السرعة معزولة عن التقسيم المحدد للعملاء .</li>
-										<li style="font-weight: bold;font-size: 16px;">ندعم جميع صيغ الفيديو المشهوره على الهواتف وكذالك يمكنك تشغيل مقاطع الفيديو على اي تطبيق مثل vlc او kmplayer على الاندرويد</li>
+										<li style="font-weight: bold;font-size: 16px;">ندعم جميع صيغ الفيديو المشهوره على الهواتف وكذالك يمكنك تشغيل مقاطع الفيديو FullHD 1080p   على اي تطبيق مثل vlc او kmplayer على الاندرويد</li>
 										<li>ملفات استراحتك تبقى كما هي ولن تنقل مجلد واحد فقط عند اضافة الاقسام تضيف المسارات الى النظام بكل سهولة .</li>
 										<li>التحكم الكامل بسرعة المشاهدة وسرعه التنزيل للمستخدمين </li>
 										<li>يدعم معضم الصيغ  المشهورة لملفات الفيديو</li>
@@ -123,6 +123,9 @@
 										<li>خاصية البحث الذكي في الاقسام والملفات </li>
 									</ul>
 									<h4 style="font-size:20px;">تمتع بخدمة تليق بشبكتك !</h4>
+
+									<img style="float: left;position: absolute;top: 18%;left: -6%;z-index: 999;width: 70px;" src="./imgs/Logo-Full-HD8-R-10683-31.png">
+
 									<a target="_blank" href="http://www.mediafire.com/file/r8m7srxbccdr1ah/Estra7ah_Manager_2.8_Demo.exe" >
 
 									<button class="btn try_btn" style="">
