--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 								<ul>
 									<li class="good">يمكنك التمتع بكل الخصائص والميزات</li>
 									<li class="good">دعم متواصل في حال وجود مشاكل</li>
+									<li class="wrn">بدون تركيب النظام لشبكتك</li>
 									<li class="wrn">لا يمكنك التحديث لاصدار جديد</li>
 									<li class="wrn">محدود لشهرين </li>
 									<li class="wrn">لايتوفر ملف html لتعديل التصميم</li>
@@ -204,6 +205,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 										<li class="good">دعم متواصل في حال وجود مشاكل</li>
 										<li class="wrn-1">يمكنك التحديث لاصدار واحده جديد من النظام</li>
 										<li class="wrn-1">محدود ل 4 اشهر </li>
+										<li class="wrn">بدون تركيب النظام لشبكتك</li>
 										<li class="wrn">لايتوفر ملف html لتعديل التصميم</li>
 									</ul>
 								</div>
@@ -220,6 +222,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 									<ul>
 										<li class="good">يمكنك التمتع بكل الخصائص والميزات</li>
 										<li class="good">دعم متواصل في حال وجود مشاكل</li>
+										<li class="good">مع تركيب النظام لشبكتك عبر TeamViewer</li>
 										<li class="wrn-2">يمكنك التحديث لاصدارين جدد من النظام</li>
 										<li class="wrn-2">محدود لسنة كاملة </li>
 										<li class="wrn">لايتوفر ملف html لتعديل التصميم</li>
@@ -239,6 +242,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 									<li class="good">دعم متواصل في حال وجود مشاكل</li>
 									<li class="good">يمكنك التحديث لـ 3 اصدارات جديدة  من النظام</li>
 									<li class="good">غير محدود .. مدى الحياة !!</li>
+									<li class="good">مع تركيب النظام لشبكتك عبر TeamViewer</li>
 									<li class="good">توفير الملف المصدري html للتعديل على التصميم</li>
 								</ul>
 							</div>
