--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					    border-radius: 8px;
 					    top: 83px;
 					    font-size: 11px;
-    "><div>حصرياً .. خصم 20% لاول خمسة رخص تباع من النظام</div></div>
+    "><div>شكراً لكم .. انتظرونا في النسخه الذهبيه (الاصدار الثالث) قريباً</div></div>
 			<div class="container " id="prods">
 				<div class="row">
 					<div class="col-md-12 " style="color:#fff">
