--- a/index.html
+++ b/index.html
@@ -294,13 +294,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 						<div class="row">
 							<div class="col-md-8 " >
 								<div style="padding: 22px;margin-top: 20px;margin-right: 22px;">
-									<h1>في الاصدار الثالث</h1>
+									<h1>في النسخه الذهبيه (الاصدار الثالث) </h1>
 									<ul style="font-size: 15px;">
-										
-										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقراءة والبحث في الكتب تدعم الهواتف </li>
-										<li>دعم صيغ اكثر واضافة ثيمات جديدة للاستراحة</li>
-										<li>انشاء نظام ادارة مستخدمين لدعم التعليقات والتقييم</li>
 										<li>انشاء دردشه عامه بين مستخدمين الشبكة مع قسم ادارة الدردشة لمدير الشبكة</li>
+										
+										<li>دعم صيغ اكثر واضافة ثيمات جديدة للاستراحة</li>
+										<li>اضافة قالب جديد رائع ومناسب ومتجاوب .</li>
+										<li>اضافة قائمه الاصحائيات في لوحة التحكم (عدد المتواجدين ونسبه ال bandwidth واضافة اخرى)</li>
+										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقراءة والبحث في الكتب تدعم الهواتف </li>
 									</ul>
 								</div>
 								<div class="alert alert-info " style="margin: 0px;margin-right: 20px;">
