--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', end
 										
 										<li>دعم صيغ اكثر واضافة ثيمات جديدة للاستراحة</li>
 										<li>اضافة قالب جديد رائع ومناسب ومتجاوب .</li>
-										<li>اضافة قائمه الاصحائيات في لوحة التحكم (عدد المتواجدين ونسبه ال bandwidth واضافة اخرى)</li>
+										<li>اضافة قائمه الاحصائيات في لوحة التحكم (عدد المتواجدين ونسبه ال bandwidth واضافة اخرى)</li>
 										<li>سيتم اضافة نظام المكتبه لتوفير بيئة مناسبة للقراءة والبحث في الكتب تدعم الهواتف </li>
 									</ul>
 								</div>
