--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
           <div class="cont3" id="contact"  style="background:#fff;color: #000;padding-bottom: 6%;padding-top: 10px;" >
             <div class="row">
               <div class="col-sm-12 ">
-                <div style="font-size:40px;margin-bottom: 20px;direction: rtl;font-family: cpanel-sego-bold" >اطلب رخصتك الان</div>
+                <div class="buy" style="font-size:40px;margin-bottom: 20px;direction: rtl;font-family: cpanel-sego-bold" >اطلب رخصتك الان</div>
               </div>
               <div class="col-sm-12 cright" >
                 <div style="font-size: 20px;">
