--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                       <h4>ترخيص محلي</h4>
                       <ul class="features">
                           <li class="brief">مناسب للشبكات الصغيرة</li>
-                          <li class="price" style="background: #536747;">$10<div class="over">$20</div></li>
+                          <li class="price" style="background: #536747;">$20</li>
                           <li>يمكنك التمتع بكل الخصائص والمميزات</li>
                           <li>دعم متواصل في حال وجود مشاكل</li>
                           <li>تحديثات امنية واصلاحات فقط</li>
@@ -560,7 +560,7 @@
                           <li>يمكنك التمتع بكل الخصائص والمميزات</li>
                           <li>دعم متواصل في حال وجود مشاكل</li>
                           <li>تحديثات امنية واصلاحات و اضافات</li>
-                          <li>بدون تركيب النظام لشبكتك</li>
+                          <li>مع تركيب النظام لشبكتك</li>
                           <li>غير محدود (مدى الحياة)</li>
                           <li class="buy"><button>طلب رخصة</button></li> 
                       </ul>
@@ -602,7 +602,7 @@
                   </ul>
                 </div>
                 <div class="col-xs-6 ">
-                <img src="./advs/8.jpg">
+                <img src="./advs/8.jpg" style="width: 100%">
                 </div>
 
 
