--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <!-- BUTTON -->
               <div class="download-cta">
               
-                <a href="https://www.mediafire.com/?4a177gy2z1nhira" class="btn btn-play-store dnbtn"><i class="fa  fa-windows"></i>نزل النسخه التجريبية الان</a>
+                <a href="https://www.mediafire.com/?4a177gy2z1nhira" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-windows"></i >  نزل النسخه التجريبية الان  </a>
                 <a href="#" class="btn btn-app-store dnbtnr"><i class="fa fa-shopping-cart "></i>طلب نسخه لشبكتك</a>
                 
               </div>
