--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <div class="download-cta">
               
                 <a href="https://www.mediafire.com/?4a177gy2z1nhira" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-windows"></i >  نزل النسخه التجريبية الان  </a>
-                <a href="#" class="btn btn-app-store dnbtnr"><i class="fa fa-shopping-cart "></i>طلب نسخه لشبكتك</a>
+                <a href="#" class="buy btn btn-app-store dnbtnr"><i class="fa fa-shopping-cart "></i>طلب رخصة لشبكتك</a>
                 
               </div>
             </div>
