--- a/index.html
+++ b/index.html
@@ -890,15 +890,13 @@
 	<script src="js/tether.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script type="text/javascript">
-  $(".Loader").fadeOut(function(){
 
-      });
-		 /*setTimeout(function(){
+		 setTimeout(function(){
   		$(".Loader").fadeOut(function(){
 
   		});
 	  },5000);
-     */
+     
 	</script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
