--- a/index.html
+++ b/index.html
@@ -765,6 +765,11 @@
                      <div>
                      <style type="text/css">
                        @media only screen and (min-width: 700px) {
+                          .img-reponsive{
+                            width: 100%;
+                            margin-top: 10px;
+                            margin-bottom: 10px;
+                          }
                           .head-logo{
                             text-align: center;
                             font-size: 53px;
