--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <!-- BUTTON -->
               <div class="download-cta">
               
-                <a href="https://www.mediafire.com/?4a177gy2z1nhira" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-windows"></i >  نزل النسخه التجريبية الان  </a>
+                <a href="https://www.mediafire.com/?4a177gy2z1nhira" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-spinner fa-spin "></i >  يتم انشاء النسخه التجريبيه الرمضانية  </a>
                 <a href="#" class="buy btn btn-app-store dnbtnr"><i class="fa fa-shopping-cart "></i>طلب رخصة لشبكتك</a>
                 
               </div>
