--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
                         .cicon{
                           margin: 10px;
                           padding: 13px;
-                          background: #aaa;
+                          background: #fff;
                           color: #191919;
                           
                           text-align: center;
@@ -810,7 +810,7 @@
 
                           font-size: 17px;
                           padding: 0px;
-                          background: #aaa;
+                          background: #fff;
                         }
                         .cicon:hover{
                           background: #333;
