--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
         font-size: 13px;
         font-family: cpanel-sego-bold;
         z-index: 9;
+        color: #fff;
       }
     </style>
    <div class="offerred">عرض رمضاني خصم 25%</div>
