--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
               <!-- BUTTON -->
               <div class="download-cta">
               
-                <a href="https://www.mediafire.com/?4a177gy2z1nhira" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-spinner fa-spin "></i >  يتم انشاء النسخه التجريبيه الرمضانية  </a>
+                <a href="http://www.mediafire.com/file/xzhsihjgfnfrnl7/Estra7ah+Manager+3.3+Ramadan.exe" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-windows "></i >  تنزيل النسخه الرمضانية المجانية </a>
                 <a href="#" class="buy btn btn-app-store dnbtnr"><i class="fa fa-shopping-cart "></i>طلب رخصة لشبكتك</a>
                 
               </div>
