--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="row v-align-children">
           <div class="col-md-12 col-sm-12">
             <div style="margin-top: 20px;">
-              <h1 class="head-logo ara">استراحة مانجر</h1>
+              <h1 class="head-logo ara" style=" font-family: 'Rakkas', cursive;">استراحة مانجر</h1>
               <h1 class="head-logo">EstravahManager</h1>
               
             </div>
