--- a/index.html
+++ b/index.html
@@ -165,7 +165,6 @@
         color: #fff;
       }
     </style>
-   <div class="offerred">عرض رمضاني خصم 25%</div>
    <nav class="navbar navbar-default navbar-fixed-top scroll-nav dark-nav scroll-fixed-nav" role="navigation">
     <div class="container">
       
@@ -540,7 +539,7 @@
                       <h4>ترخيص محلي</h4>
                       <ul class="features">
                           <li class="brief">مناسب للشبكات الصغيرة</li>
-                          <li class="price over" ><div style="text-decoration: line-through;font-size: 19px;margin-top: -11px;margin-bottom: -16px;opacity: 0.5;">$20</div><div >$15</div></li>
+                          <li class="price over" ><div >$20</div></li>
                           <li>يمكنك التمتع بكل الخصائص والمميزات</li>
                           <li>دعم متواصل في حال وجود مشاكل</li>
                           <li>تحديثات امنية واصلاحات فقط</li>
@@ -553,7 +552,7 @@
                       <h4>ترخيص نهائي</h4>
                       <ul class="features">
                           <li class="brief">مناسب للشبكات المتوسطة</li>
-                          <li class="price over" ><div style="text-decoration: line-through;font-size: 19px;margin-top: -11px;margin-bottom: -16px;opacity: 0.5;">$30</div><div >$22</div></li>
+                          <li class="price over" ><div style="text-decoration: line-through;font-size: 19px;margin-top: -11px;margin-bottom: -16px;opacity: 0.5;">$40</div><div >$30</div></li>
                           <li>يمكنك التمتع بكل الخصائص والمميزات</li>
                           <li>دعم متواصل في حال وجود مشاكل</li>
                           <li>تحديثات امنية واصلاحات و اضافات</li>
@@ -566,7 +565,7 @@
                       <h4>نهائي كامل</h4>
                       <ul class="features">
                           <li class="brief">مناسب للشبكات الكبيره</li>
-                          <li class="price over" ><div style="text-decoration: line-through;font-size: 19px;margin-top: -11px;margin-bottom: -16px;opacity: 0.5;">$80</div><div >$60</div></li>
+                          <li class="price over" ><div style="text-decoration: line-through;font-size: 19px;margin-top: -11px;margin-bottom: -16px;opacity: 0.5;">$100</div><div >$80</div></li>
                           <li>يمكنك التمتع بكل الخصائص والمميزات</li>
                           <li>دعم متواصل في حال وجود مشاكل</li>
                           <li>تحديثات امنية واصلاحات و اضافات</li>
