--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
                       <h4>ترخيص محلي</h4>
                       <ul class="features">
                           <li class="brief">مناسب للشبكات الصغيرة</li>
-                          <li class="price over" ><div >$20</div></li>
+<li class="price over" ><div style="text-decoration: line-through;font-size: 19px;margin-top: -11px;margin-bottom: -16px;opacity: 0.5;">$30</div><div >$20</div></li>
                           <li>يمكنك التمتع بكل الخصائص والمميزات</li>
                           <li>دعم متواصل في حال وجود مشاكل</li>
                           <li>تحديثات امنية واصلاحات فقط</li>
