--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <!-- BUTTON -->
               <div class="download-cta">
               
-                <a href="http://www.mediafire.com/file/xzhsihjgfnfrnl7/Estra7ah+Manager+3.3+Ramadan.exe" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-windows "></i >  تنزيل النسخه الرمضانية المجانية </a>
+                <a href="" target="_blank" class="btn btn-play-store dnbtn"><i class="fa  fa-windows "></i >  يتم انشاء نسخه مجانيه</a>
                 <a href="#" class="buy btn btn-app-store dnbtnr"><i class="fa fa-shopping-cart "></i>طلب رخصة لشبكتك</a>
                 
               </div>
